Arm Movement + walking Animation
Player can walk and Jump with my own animation

--- a/GameProject.csproj
+++ b/GameProject.csproj
@@ -241,6 +241,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\ArmRotation.cs" />
     <Compile Include="Assets\parallaxing.cs" />
     <Compile Include="Assets\tilling.cs" />
   </ItemGroup>
